Impact of Our Project

--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -1301,8 +1301,14 @@
    "id": "168b061e-45bf-4af6-b5ed-55dda646a5cb",
    "metadata": {},
    "source": [
-    "## Impact?\n",
-    "Discuss what impact such findings could have"
+    "# Impact of Our Project\n",
+    "Considering that our project mainly focuses on data classification, our goal was to be able to create a model that would predict quality based on the values of specific predictors (acidity and ripeness). \n",
+    "\n",
+    "By being able to predict when a apple is good or bad quality, this can provide crucial insight into how each variable that we use can affect apple quality. Furthermore, such predictions may also be able to estimate the \"ideal\" ripeness and acidity values to yield the \"good\" quality apples. This can be useful especially in the real world where millions of apples are harvested and sold everyday. This makes it easier for the market to predict which apples would be good without having to individually test and evaluate saving and money. \n",
+    "\n",
+    "Futhermore, being able to understand the characteristics \"bad\" apples helps those supplying apples as they could adapt their practices to ensure that only good quality apples come out futher reducing waste and loss revenue.\n",
+    "\n",
+    "Overall, being able to predict an apple quality is net positive for everybody. It saves time, money, increases efficiency and reduces health risk. While our model only uses 2 variables, we believe that it is a good first step and a proof of concept that something like this can be explored and expanded upon in a much larger scale to everyone's benefit."
    ]
   },
   {
