--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -1292,8 +1292,14 @@
    "metadata": {},
    "source": [
     "# Disscusion\n",
-    "summarize what you found\r\n",
-    "discuss whether this is what you expected to fin?\r\n"
+    "Through the classification model, we successfully predicted whether the quality of apples is good or bad from two aspects: acidity and ripeness. If we were to take this visualization at face value, it is very difficult or impossible to properly imply a correlation between the two variables and their associated quality. \n",
+    "\n",
+    "This is most likely because, despite all the variables we have in the dataset, we still do not have enough information on apples to determine the standard/threshold to which an apple is good or bad quality.?\n",
+    "Take for example, apply type. There are hundreds of different apple species (types) which this dataset doesn’t mention. It could be possible that this dataset only has one apple type, but it is also possible that it could be a pool of many, we just don’t know. \n",
+    "\n",
+    "This is important because different apple types have different characteristics and therefore standards that make a certain apple of a certain kind better or worse. Since we don’t have this information, it can be very difficult to derive a meaningful correlation. \n",
+    "\n",
+    "But if we enter the values of apple ripeness and acidity，we can still predict the quality via our model built.\r\n"
    ]
   },
   {
