--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -1339,9 +1339,11 @@
     "Elgiriyewithana, N. (2024, January 11). Apple Quality. <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp\n",
     ";Kaggle.  https://www.kaggle.com/datasets/nelgiriyewithana/apple-quality/data \n",
     "    \n",
-    "Farcuh, M. (2023). Fruit Harvest - Determining Apple Fruit Maturity and Optimal Harvest Date. Determining Apple Fruit Maturity and Optimal Harvest Date. \n",
+    "Farcuh, M. (2023). Fruit Harvest - Determining Apple Fruit Maturity and Optimal Harvest Date. <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp\n",
+    ";Determining Apple Fruit Maturity and Optimal Harvest Date. \n",
     "\n",
-    "    Musacchi, S., & Serra, S. (2018). Apple Fruit Quality: Overview on pre-harvest factors. Scientia Horticulturae, 234, 409–430. https://doi.org/10.1016/j.scienta.2017.12.057 "
+    "Musacchi, S., & Serra, S. (2018). Apple Fruit Quality: Overview on pre-harvest factors. Scientia Horticulturae, <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp\n",
+    ";234, 409–430. https://doi.org/10.1016/j.scienta.2017.12.057 "
    ]
   },
   {
