added edxpdected findings

--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -2805,7 +2805,7 @@
    "id": "432c7df4-f70e-4954-b36e-d4ccfa341f79",
    "metadata": {},
    "source": [
-    "# Disscusion\n",
+    "# Discussion\n",
     "Through the classification model, we successfully predicted whether the quality of apples is good or bad from two aspects: acidity and ripeness. If we were to take this visualization at face value, it is very difficult or impossible to properly imply a correlation between the two variables and their associated quality. \n",
     "\n",
     "This is most likely because, despite all the variables we have in the dataset, we still do not have enough information on apples to determine the standard/threshold to which an apple is good or bad quality.?\n",
@@ -2817,11 +2817,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c14f03f6-dd5e-45c8-9fde-5a372272c19a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "168b061e-45bf-4af6-b5ed-55dda646a5cb",
    "metadata": {},
    "source": [
-    "# Impact of Our Project\n",
+    "## Impact of Our Project\n",
     "Considering that our project mainly focuses on data classification, our goal was to be able to create a model that would predict quality based on the values of specific predictors (acidity and ripeness). \n",
     "\n",
     "By being able to predict when a apple is good or bad quality, this can provide crucial insight into how each variable that we use can affect apple quality. Furthermore, such predictions may also be able to estimate the \"ideal\" ripeness and acidity values to yield the \"good\" quality apples. This can be useful especially in the real world where millions of apples are harvested and sold everyday. This makes it easier for the market to predict which apples would be good without having to individually test and evaluate saving and money. \n",
