--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -2817,12 +2817,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c14f03f6-dd5e-45c8-9fde-5a372272c19a",
+   "cell_type": "markdown",
+   "id": "8c04a04c-3898-41d2-8652-6759bd5a4107",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Expected Findings\n",
+    "When data visualization was completed for the data, there was no apparent relationship between acidity and ripeness when it came to predicting the quality of apples. The values for both variables centered around zero because they were standardized. However, the data contained values for a variety of apples and it was not specific to a particular type. This caused a variance in the acidity and ripeness values that saturated the data making it difficult to have an effective prediction. This made it difficult to create an effective model, despite having correct code. Overall, we expected to find an association between acidity and ripeness of apples, but the variation in the data set leads to inconclusive results."
+   ]
   },
   {
    "cell_type": "markdown",
